# prj-runner

./: CHANGELOG.md  Cargo.toml  cog.toml  flake.nix
.github/workflows/: tag.yaml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs
crates/prj-base-directory/: Cargo.toml
crates/prj-base-directory/src/: constants.rs  error.rs  lib.rs
crates/project-base-directory/: Cargo.toml
crates/project-base-directory/src/: constants.rs  lib.rs
flake-parts/: cargo.nix  ci.nix
