[package]
name = "prj-runner"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
prj-base-directory = { path = "../prj-base-directory" }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
