[package]
name = "prj-runner"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
project-base-directory = { path = "../project-base-directory" }
ron = "0.8.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
