[package]
name = "prj-base-directory"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
gix = { version = "0.54.1", optional = true }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = ["git"]
git = ["dep:gix"]

