[package]
name = "project-base-directory"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"
description = "An implementation of a common base directory system for software projects."
homepage = "https://github.com/justinrubek/project-runner"
repository = "https://github.com/justinrubek/project-runner"

[dependencies]
gix = { version = "0.62", optional = true }
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = ["git"]
git = ["dep:gix"]

